tests/passing/unit_constant.tails
const A: unit = pass

func tests() -> unit:
  discard A
