tests/failing/type_def_generics_recursive.tails
type A<T> = A<T>

func tests() -> unit:
  pass
